# EDICommonFiles

./: .gitignore  CMakeLists.txt  README.org
include/: CommonFormatFile.h
src/: CentreHeader.cpp  CentreHeader.h  CentreTrailer.cpp  CentreTrailer.h  DetailRecord.cpp  DetailRecord.h  FileHeader.cpp  FileHeader.h  FileTrailer.cpp  FileTrailer.h  IRow.h  StringUtils.h  Validator.cpp  Validator.h
test/: CMakeLists.txt  test_centre_header.cpp  test_centre_trailer.cpp  test_file_header.cpp  test_file_trailer.cpp
